# Sovereign-Ouroboros-OS

./: Dockerfile  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
ouroboros/: __init__.py  __main__.py  ouroboros_loop.py
ouroboros/api/: app.py
ouroboros/chronoweave/: __init__.py  timeline_engine.py
ouroboros/compliance/: __init__.py  domains.py
ouroboros/core/: __init__.py  contracts.py  embedding.py  logging.py  types.py
ouroboros/ethos_compiler/: __init__.py  compiler.py
ouroboros/hivemind/: __init__.py  federation.py  network.py
ouroboros/knowledge/: __init__.py  knowledge_base.py  schemas.py
ouroboros/knowledge/eval/: __init__.py  golden_set.jsonl  metrics.py
ouroboros/knowledge/ingestion/: chunker.py  embedder.py  pipeline.py
ouroboros/knowledge/retrieval/: __init__.py  context_assembler.py  hybrid_search.py
ouroboros/knowledge/storage/: __init__.py  sqlite_store.py
ouroboros/memory/: __init__.py  store.py
ouroboros/metamorph/: __init__.py  evolution.py
ouroboros/neurosynth/: __init__.py  imagination.py
sovereign_ouroboros_os/: __init__.py  __main__.py  ouroboros_loop.py
sovereign_ouroboros_os/api/: __init__.py  app.py
sovereign_ouroboros_os/chronoweave/: __init__.py  timeline_engine.py
sovereign_ouroboros_os/core/: __init__.py  contracts.py  embedding.py
sovereign_ouroboros_os/ethos_compiler/: __init__.py  compiler.py
sovereign_ouroboros_os/hivemind/: __init__.py  federation.py  network.py
sovereign_ouroboros_os/knowledge/: __init__.py  knowledge_base.py  schemas.py
sovereign_ouroboros_os/knowledge/eval/: metrics.py
sovereign_ouroboros_os/knowledge/ingestion/: __init__.py  chunker.py  embedder.py  pipeline.py
sovereign_ouroboros_os/knowledge/retrieval/: __init__.py  (+3 more)
sovereign_ouroboros_os/memory/: __init__.py  store.py
sovereign_ouroboros_os/metamorph/: __init__.py  evolution.py
sovereign_ouroboros_os/neurosynth/: __init__.py  imagination.py
tests/: conftest.py  test_api.py  test_chronoweave.py  test_compliance.py  test_ethos_compiler.py  test_hivemind.py  test_kb_ingestion.py  test_kb_retrieval.py  test_memory.py  test_metamorph.py  test_network_hivemind.py  test_neurosynth.py  test_ouroboros_loop.py  test_skill_composition.py
(+2 files in other folders)
