[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ouroboros-os"
version = "0.1.0"
description = "A Recursive Intelligence Framework for Autonomous Evolution"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
