[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ouroboros-os"
version = "0.1.0"
description = "A Recursive Intelligence Framework for Autonomous Evolution"
readme = "README.md"
requires-python = ">=3.12"
# The reference implementation is intentionally dependency-free: every layer
# runs on the Python standard library so the Sovereign OS boots anywhere.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
ouroboros = "sovereign_ouroboros_os.__main__:main"

[tool.setuptools.packages.find]
include = ["sovereign_ouroboros_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
