[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ouroboros-os"
version = "0.1.0"
description = "A Recursive Intelligence Framework for Autonomous Evolution"
readme = "README.md"
requires-python = ">=3.12"
# Core runtime: stdlib only. Install extras for enhanced capabilities.
dependencies = []

[project.optional-dependencies]
# Upgrades CharNGram embeddings to fastText-quality sub-word vectors
embeddings = ["numpy>=1.26"]
# Adds the FastAPI REST + WebSocket service layer
serve = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "httpx>=0.27"]
# All optional features
full = ["numpy>=1.26", "fastapi>=0.111", "uvicorn[standard]>=0.29", "httpx>=0.27"]
dev  = ["pytest>=8.0", "pytest-cov", "numpy>=1.26", "fastapi>=0.111",
        "uvicorn[standard]>=0.29", "httpx>=0.27"]

[project.scripts]
ouroboros = "sovereign_ouroboros_os.__main__:main"

[tool.setuptools.packages.find]
include = ["sovereign_ouroboros_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
